<resources>
    <string name="app_name">MeterReading</string>
    <string name="action_scan_devices">Scan Devices</string>

    <!--Bluetooth Permission-->
    <string name="bluetooth_permission_title">Bluetooth Permission</string>
    <string name="bluetooth_not_supported">Bluetooth is not supported in device.</string>
    <string name="bluetooth_enable_request">Please turn on bluetooth.</string>
    <string name="bluetooth_enabled">Bluetooth enabled.</string>
    <string name="bluetooth_required_to_use_app">Bluetooth is required to use this application.</string>
    <string name="bluetooth_enabled_failed">Bluetooth not enabled. Please try again.</string>
    <string name="enable">ENABLE</string>

    <!--Location Service Permission-->
    <string name="location_service_required">Location services needs to be enabled on Android 6.0</string>
    <string name="location_enabled">Locations service enabled.</string>
    <string name="location_enabled_failed">Location service not enabled. Please try again.</string>
    <string name="location_permission_title">Location Service</string>
    <string name="location_enable_request">Please enable location service.</string>

    <string name="allow">ALLOW</string>

    <string name="permission_required">Permission required</string>
    <string name="location_runtime_permission_required">"Since Android 6.0 Marshmallow location permission is required
        in order to scan Bluetooth low energy devices."
    </string>
    <string name="storage_runtime_permission_required">"Storage permission is required in order to download readings."
    </string>
    <string name="camera_runtime_permission_required">"Camera permission is required in order to scan QR code."</string>

    <string name="location_permission_denied" type="id">Location permission denied.</string>
    <string name="string_storage_permission">Application required Storage permission to Export Logs</string>
    <string name="no_connectivity">Failed!! Please check your internet connection</string>
    <string name="title_activity_scan_beacon">Scan Beacon</string>
    <string name="string_btn_ok">OK</string>
    <string name="ble_not_supported">"Android Device not supported BLE Communication"</string>
    <string name="string_bluetooth_permission">Device Bluetooth is OFF. Turn it ON</string>
    <string name="title_activity_maps">Map</string>
    <string name="string_permission_title">Permission Required</string>
    <string name="string_share_file">Choose apps to share file</string>

    <string name="hint_imei">Enter imei number</string>
    <string name="hint_amr_id">Enter amr id</string>
    <string name="hint_enter_sim">Enter sim</string>
    <string name="hint_enter_imsi">Enter imsi</string>
    <string name="device_enable">Device enable</string>
    <string name="amr_enable">AMR enable</string>
    <string name="tamper_enable">Tamper enable</string>
    <string name="device_configuration">Device configuration</string>
    <string name="wake_time">Wake time</string>
    <string name="timezone">TimeZone</string>
    <string name="data_sample_count">Data sample count</string>
    <string name="liter_per_plus">Litre per pulse</string>
    <string name="device_information">Device information</string>
    <string name="select_application_of_amr">Application of amr</string>
    <string name="type">Select type</string>
    <string name="select_diameter_size">Select diameter size</string>
    <string name="enter_state">Enter state</string>
    <string name="city">Enter city</string>
    <string name="enter_customer_device_address">Enter customer device address</string>
    <string name="hint_device_name">Enter device name*</string>
    <string name="company_name">Enter company name</string>
    <string name="hint_serial_number">Enter serial number*</string>
    <string name="hint_mac_id">Enter mac id* (eg. 2a:s3:f3:f4:g5:g4)</string>
    <string name="user_creation">User creation</string>
    <string name="select_admin">Select admin</string>
    <string name="select_user">Select user</string>
    <string name="device_allocation">Device allocation</string>
    <string name="zone">Enter zone (eg. Pune)</string>
    <string name="area">Enter area</string>
    <string name="price_per_liter">price/litre*</string>
    <string name="wing">Enter building or wing</string>
    <string name="device_location">Enter customer device Location</string>
    <string name="customer_name">Enter customer name</string>
    <string name="create_device">Create Device</string>
    <string name="Device_List">Device List</string>
    <string name="User_List">User List</string>
    <string name="meterStartReading">Meter Start Reading</string>
    <string name="device_type">Device Type</string>
    <string name="device_metadata">Device Metadata</string>

    <string-array name="device_type">
        <item>Select Device Type</item>
        <!--        <item>AMR</item>-->
        <item>BLE</item>
        <!--        <item>LoraWan</item>-->
    </string-array>

    <string-array name="Role">
        <item>Select Role</item>
        <!--        <item>AMR</item>-->
        <item>User</item>
        <item>Admin</item>
        <item>Superadmin</item>
        <!--        <item>LoraWan</item>-->
    </string-array>

    <string-array name="DeviceTypeAddUser">
        <item>Select Device Type</item>
        <!--        <item>AMR</item>-->
        <item>BLE</item>
        <item>GPRS</item>
        <item>LORAWAN</item>
        <!--        <item>LoraWan</item>-->
    </string-array>

    <string-array name="diameter_array">
        <item>Select size</item>
        <item>15 mm</item>
        <item>20 mm</item>
        <item>25 mm</item>
        <item>50 mm</item>
        <item>65 mm</item>
        <item>80 mm</item>
        <item>100 mm</item>
        <item>150 mm</item>
        <item>250 mm</item>
        <item>300 mm</item>
    </string-array>

    <string-array name="options">
        <item>Select option</item>
        <item>Volumetric</item>
        <item>Mutlijet</item>
        <item>Singlejet</item>
        <item>Bulk</item>
        <item>Electromagnetic</item>
        <item>Ultrasonic</item>
    </string-array>

    <string-array name="application_of_amr">
        <item>Select Option</item>
        <item>Domestic</item>
        <item>Commercial</item>
        <item>STP</item>
        <item>ETP</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_devices">Devices</string>
    <string name="menu_report">Report</string>
    <string name="billing">Billing</string>
    <string name="select_amr_id">Select BLE AMR Id</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="hint_date_format">mm/dd/yyyy</string>
    <string name="get_total">Get Total</string>
    <string name="get_invoice">Get Invoice</string>
    <string name="name_and_address">Name and Address</string>
    <string name="login_text"><![CDATA[Monitor & Conserve Energy SMARTLY]]></string>
    <string name="generate">Generate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistics">Statistics</string>
    <string name="contactUs">Contact Us</string>
    <string name="logout">logout</string>
    <string name="addUser">Add User</string>
    <string name="deviceList">Devices</string>
    <string name="userList">User List</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="contactNo">ContactNo</string>
    <string name="password">Password</string>
    <string name="role">Role</string>
    <string name="username">Username</string>
    <string name="deviceType">DeviceType</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="issue">Issues</string>
    <string name="dashboard">Dashboard</string>

    <string-array name="duration">
        <item>Select Option</item>
        <item>Last Week</item>
        <item>Last Month</item>
        <item>Custom</item>
    </string-array>
</resources>