<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_devices"
            android:title="@string/menu_devices" />
        <item
            android:id="@+id/nav_report"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_add_user"
            android:title="@string/addUser" />
        <item
            android:id="@+id/nav_billing"
            android:title="@string/billing" />
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/contactUs" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>
</menu>
